<resources>
    <string name="app_name">Easy Event</string>
    <string name="welcome_title">Easy Event</string>
    <string name="welcome_subtitle">Discover Amazing Events</string>
    <string name="welcome_description">Find and book events that match your interests. From conferences to concerts, we have it all!</string>
    <string name="get_started">Get Started</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_link">Don\'t have an account? Register here</string>
    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Join Easy Event today</string>
    <string name="full_name_hint">Full Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button">Create Account</string>
    <string name="login_link">Already have an account? Login here</string>
    <string name="phone_hint">Phone Number</string>
    <string name="send_otp_button">Send OTP</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="verify_otp_button">Verify &amp; Create Account</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="phone_login_title">Phone Login</string>
    <string name="phone_login_subtitle">Enter your phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification_title">Verify OTP</string>
    <string name="otp_verification_subtitle">Enter the code sent to your phone</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="events">Events</string>
    <string name="logout">Logout</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="event_categories">Event Categories</string>
    <string name="featured_events">Featured Events</string>
</resources>